--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "bugs": {
     "url": "https://github.com/dfm/ganymede-ext/issues"
   },
-  "license": "BSD-3-Clause",
+  "license": "MIT",
   "author": "Dan Foreman-Mackey",
   "files": [
     "lib/**/*.{d.ts,eot,gif,html,jpg,js,js.map,json,png,svg,woff2,ttf}",
